syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";
option java_outer_classname = "CiBadgeEvents";

import "ci/proto/storage/common.proto";
import "ci/proto/storage/check_iteration.proto";

message Event {
    oneof type {
        CheckCreatedEvent check_created_event = 1;
        CheckFinishedEvent check_finished_event = 2;
        IterationFinishedEvent iteration_finished_event = 3;
        TestsChangedEvent tests_changed_event = 4;
        TestsChangedEvent you_broke_tests_event = 5;
        CheckFirstFailEvent first_fail_tests_event = 6;
        TestMuteChanged test_mute_changed = 7;
    }
}

message TestMuteChanged {
    string owner = 1;
    uint32 number_of_muted_tests = 2;
    uint32 number_of_unmuted_tests = 3;
    uint32 number_of_paths = 4; // total
    repeated TestPathMuteInfo paths = 5; // truncated
}

message TestPathMuteInfo {
    string path = 1;
    uint32 number_of_tests = 2; // total
    repeated TestMuteInfo tests = 3; // truncated
}

message TestMuteInfo {
    string hid = 1;
    string suite_hid = 2;
    string name = 3;
    string subtest_name = 4;
    ResultType result_type = 5;
    repeated string tags = 6;
    repeated ToolchainMuteInfo toolchains = 7;
}

message ToolchainMuteInfo {
    string name = 1;
    bool muted = 2;
}

message CheckFinishedEvent {
    ReviewRequest review_request = 1;
    CheckStatus status = 2;
    User author = 3;
    DovecoteCheck check = 4;
}

message CheckFirstFailEvent {
    ReviewRequest review_request = 1;
    User author = 3;
    DovecoteCheck check = 4;
    DovecoteIteration iteration = 5;
}

message CheckCreatedEvent {
    ReviewRequest review_request = 1;
    User author = 3;
    DovecoteCheck check = 4;
}

message ReviewRequest {
    uint64 id = 1;
    uint64 diffset_id = 2;
}

message DovecoteCheck {
    int64 id = 1;
    CheckStatus status = 2;
}

message User {
    string name = 1;
}

message IterationFinishedEvent {
    ReviewRequest review_request = 1;
    CheckStatus status = 2;
    User author = 3;
    DovecoteCheck check = 4;
    DovecoteIteration iteration = 5;
}

message DovecoteIteration {
    IterationId id = 1;
    CheckStatus status = 2;
}

message TestsChangedEvent {
    string owner = 1;
    string author = 2;
    OrderedRevision left_revision = 3;
    OrderedRevision right_revision = 4;
    int64 check_id = 5;
    IterationType iteration_type = 6;
    uint32 number_of_paths = 7; // total
    repeated TestPathInfo paths = 8; // truncated
    uint32 number_of_broken_tests = 9;
    uint32 number_of_fixed_tests = 10;
    string right_revision_title = 11;
}

message TestPathInfo {
    string path = 1;
    uint32 number_of_tests = 2; // total
    repeated TestInfo tests = 3; // truncated
}

message TestInfo {
    string hid = 1;
    string suite_hid = 2;
    string name = 4;
    string subtest_name = 5;
    ResultType result_type = 6;
    repeated string link_names = 7;
    repeated string link_values = 8;
    repeated string tags = 9;
    repeated ToolchainInfo toolchains = 10;
    string old_test_id = 11;
}

message ToolchainInfo {
    string name = 1;
    TestStatus left = 2;
    TestStatus right = 3;
    TestDiffType diff_type = 4;
}
